added logic for creating lecture, unique title